[DROOLS-6036] isolate commands in their own module (#4322)
* [DROOLS-6036] isolate commands in their own module

* isolate trait related constants out of TraitableBean

* [DROOLS-6036] move conf impl from drools-core to -compiler

* [DROOLS-6036] avoid using commands in DMNScenarioExecutableBuilder

* wip

* [DROOLS-6036] move process related events to kogito

* Update drools-scenario-simulation/drools-scenario-simulation-integrationtest/pom.xml

Co-authored-by: Daniele Zonca <dzonca@redhat.com>

* Update drools-commands/src/main/java/org/drools/commands/runtime/BatchExecutionCommandImpl.java

Co-authored-by: Daniele Zonca <dzonca@redhat.com>

* wip

* wip

* remove DMNRuntimeFluent

* wip

Co-authored-by: Daniele Zonca <dzonca@redhat.com>